# toml2cv

./: Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
src/: main.rs  structs.rs
template/: cv.typ
