[package]
name = "toml2cv"
version = "1.0.3"
repository = "https://github.com/masroof-maindak/toml2cv"
readme = "README.md"
edition = "2024"
license = "MIT"
description = "Generate a Typst resume via a config file."
keywords = ["toml", "resume", "cv", "template", "typst"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
toml = "1.1.2"

[[bin]]
name = "toml2cv"
path = "src/main.rs"
